# BlackholeAnalytic

./: .gitignore  CMakeLists.txt  readme.md
main/: calcKsi.cpp  geodesics.cpp  ring.cpp
src/: bhAnalytic.cpp  bhAnalytic.h  defs.h
